# TAP-3

./: .replit  README.md  STREAMLIT_SETUP.md  app.py  package-lock.json  package.json  pyproject.toml  rag_service.py  replit.md  run_streamlit.sh  tacit_rules.json
attached_assets/: Pasted--server-index-ts-import-express2-from-express-server-ro_1765618421329.txt  Pasted-Replit-Master-Prompt-Living-Tacit-Agent-with-PDF-RAG-GOAL-Upgrade-the-existing-Tacit-Agent-Platfor-1760022311836_1760022311837.txt  Pasted-Replit-Master-Prompt-The-Living-Tacit-Agent-Platform-GOAL-Upgrade-the-existing-agent-system-into-a-1759945118673_1759945118675.txt  Pasted-Replit-Master-Prompt-The-Tacit-Agent-Platform-TAP-PROJECT-GOAL-Create-a-highly-detailed-interac-1759933414048_1759933414049.txt  Pasted-This-prompt-is-specifically-designed-for-the-Replit-website-creation-tool-It-instructs-the-platform-1759934755382_1759934755383.txt
client/src/: index.css
client/src/components/: chat-input.tsx  chat-interface.tsx  process-steps.tsx  sidebar.tsx
client/src/pages/: home.tsx
nextjs-app/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
nextjs-app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
nextjs-app/components/: chat-input.tsx  chat-interface.tsx  process-steps.tsx  sidebar.tsx
nextjs-app/hooks/: use-toast.ts
nextjs-app/lib/: agent.ts  gemini.ts  rag.ts  storage.ts
nextjs-app/types/: agent.ts
server/: routes.ts  storage.ts
server/services/: agent.ts  gemini.ts  openai.ts  rag.ts
shared/: schema.ts
vector_store/: tfidf_index.pkl
(+12 files in other folders)
