[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.8",
    "pydantic>=2.12.0",
    "pypdf>=6.1.1",
    "scikit-learn>=1.5.0",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
]
